<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BillFragment" >

    <Button
        android:id="@+id/btn15Percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/fifteen_percent" />

    <Button
        android:id="@+id/btn20Percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn15Percent"
        android:layout_alignBottom="@+id/btn15Percent"
        android:layout_toRightOf="@+id/btn15Percent"
        android:text="@string/twenty_percent" />

    <Button
        android:id="@+id/btn10Percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn15Percent"
        android:layout_alignBottom="@+id/btn15Percent"
        android:layout_toLeftOf="@+id/btn15Percent"
        android:text="@string/ten_percent" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/hint_amount"
        android:inputType="numberDecimal"
        android:textAppearance="?android:attr/textAppearanceLargeInverse" />

    <TextView
        android:id="@+id/tvTipLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn10Percent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:paddingRight="15dp"
        android:text="@string/label_tip"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvTipAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvTipLabel"
        android:layout_alignBottom="@+id/tvTipLabel"
        android:layout_toRightOf="@+id/tvTipLabel"
        android:text="@string/default_tip"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
